tests/baselines/reference/symbolProperty29.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty29.ts(5,6): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/es6/Symbols/symbolProperty29.ts (1 errors) ====
    class C1 {
        [Symbol.toStringTag]() {
            return { x: "" };
        }
        [s: symbol]: () => { x: string };
         ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }